--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,2 +1,15 @@
-<h1>Public::Homes#top</h1>
-<p>Find me in app/views/public/homes/top.html.erb</p>
+<div class = "text-center">
+
+<h2>ようこそ、ながのCAKEへ！</h2><br>
+<h4>このサイトは、ケーキ販売のECサイトになります。<br>
+会員でない方も商品の閲覧はできますが、<br>
+購入するには会員登録が必要になります。</p>
+</h4>
+</div>
+<div class = "container">
+    
+<h1><b>新着商品</h1>
+    
+    <p>items details</p>
+    
+    <%= link_to "全ての商品を見る＞",index_path %>
