--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,64 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nagano</title>
+    <title>NAGANO CAKE</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
   </head>
 
   <body>
+   <header>
+     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+       <div class="container ">
+         <a class="text-white navbar-brand" href="/"><span>Nagano Cake</span></a>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+           <ul class="navbar-nav ml-auto">
+           
+             <li>
+               <%= link_to about_path,  class: "text-white navbar-brand" do %>  
+                 <i class="fas fa-link"></i>About
+             </li>
+                <% end %>
+             <li>
+                <%= link_to index_path, class: "text-white navbar-brand" do  %>
+                 <i class="fas fa-home"></i>商品一覧
+             </li>
+                <% end %>
+             <li>
+                <%= link_to  customers_sign_up_path, class: "text-white navbar-brand" do %>
+                 <i class="fas fa-user-plus"></i>新規登録
+             </li>
+                <% end %>
+             <li>
+                 <%= link_to customers_sign_in_path, class: "text-white navbar-brand" do %>
+                  <i class="fas fa-sign-in-alt"></i>ログイン
+             </li>
+                <% end %>
+            </ul>
+          </div>
+       </div>
+     </nav> 
+   </header>
+    
     <%= yield %>
   </body>
 </html>
+
+   <!--  <div class="table-responsive">-->
+   <!--    <table class="table">-->
+   <!--    <p>ジャンル機能検索</p>          -->
+   <!--     <tr>  -->
+   <!--      <th>name</th>-->
+   <!--      <td>%=%></td>-->
+   <!--      </tr>-->
+   <!--      <tr>-->
+   <!--      <th>info</th>-->
+   <!--      <td>%=%></td>-->
+   <!--     </tr>-->
+   <!--    </table>  -->
+   <!-- </div>-->
