--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,2 +1,14 @@
-<h1>Public::Homes#about</h1>
-<p>Find me in app/views/public/homes/about.html.erb</p>
+<div class = "container mt-5" >
+    <div class = "row">
+    <div class = "col-mx-auto">    
+            <h1>About</h1>
+    <b>
+    <p>ながのケーキは全国発送可能なケーキ屋さんです。<br></p>
+       <p>子供からお年寄りの方までお召し上がりいただけるよう、<br></p>
+    　  <p>様々なバリエーションを用意しております。<br></p>
+         <p>また、全国発送可能ですので、「いつ」でも「どこ」でも注文いただけます。<br></p>
+          <p>ぜひ、ご注文ください。</p>    
+    </b>
+     </div>
+    </div>
+ </div>
