--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,12 +25,12 @@
              </li>
                 <% end %>
              <li>
-                <%= link_to index_path, class: "text-white navbar-brand" do  %>
+                <%= link_to lot_path, class: "text-white navbar-brand" do  %>
                  <i class="fas fa-home"></i>商品一覧
              </li>
                 <% end %>
              <li>
-                <%= link_to  customers_sign_up_path, class: "text-white navbar-brand" do %>
+                <%= link_to   customer_session_path, class: "text-white navbar-brand" do %>
                  <i class="fas fa-user-plus"></i>新規登録
              </li>
                 <% end %>
