--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>NagaNo CaKe</title>
+    <title>NAGANO CAKE</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -30,7 +30,7 @@
              </li>
                 <% end %>
              <li>
-                <%= link_to   customer_session_path, class: "text-white navbar-brand" do %>
+                <%= link_to new_customer_registration_path, class: "text-white navbar-brand" do %>
                  <i class="fas fa-user-plus"></i>新規登録
              </li>
                 <% end %>
