--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,32 @@
          <a class="text-white navbar-brand" href="/"><span>Nagano Cake</span></a>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
            <ul class="navbar-nav ml-auto">
-           
+            <% if customer_signed_in? %>
+            <!-- <li>-->
+            <!--    %= link_to  customer_path(current_user.id), class: "text-white navbar-brand" do %>-->
+            <!--     <i class="fas fa-home"></i>Home-->
+            <!--    % end %>-->
+            <!-- </li>-->
+            <!-- <li>-->
+            <!--    %= link_to customers_path, class: "text-white navbar-brand" do %>-->
+            <!--     <i class="fas fa-users"></i>Users-->
+            <!--    % end %>-->
+            <!-- </li>-->
+            <!-- <li>-->
+            <!--    %= link_to customers_mypage_path, class: "text-white navbar-brand" do %>-->
+            <!--     <i class="fas fa-book-open"></i>マイページ-->
+            <!--    % end %>-->
+            <!-- </li>-->
+            <!-- <li>-->
+                <%= link_to destroy_customer_session_path, method: :delete, class: "text-white navbar-brand" do %>
+                 <i class=" fas fa-sign-out-alt"></i>Log out
+                <% end %>
+             </li>
+            <% elsif admin_signed_in? %>
+                   <%= link_to destroy_admin_session_path, method: :delete, class: "text-white navbar-brand" do %>
+                 <i class=" fas fa-sign-out-alt"></i>Log out
+                
+            <% else %>
              <li>
                <%= link_to about_path,  class: "text-white navbar-brand" do %>  
                  <i class="fas fa-link"></i>About
@@ -26,7 +51,8 @@
                 <% end %>
              <li>
                 <%= link_to lot_path, class: "text-white navbar-brand" do  %>
-                 <i class="fas fa-home"></i>商品一覧
+                 <i class="fal fa-birthday-cake fa-sm" style="color: #111212;"></i>
+                 商品一覧
              </li>
                 <% end %>
              <li>
@@ -35,9 +61,11 @@
              </li>
                 <% end %>
              <li>
-                 <%= link_to customers_sign_in_path, class: "text-white navbar-brand" do %>
+                 <%= link_to  new_customer_session_path, class: "text-white navbar-brand" do %>
                   <i class="fas fa-sign-in-alt"></i>ログイン
              </li>
+                <% end %>
+                <% end %>
                 <% end %>
             </ul>
           </div>
