--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,2 +1,27 @@
+
+<div class = "containar mt-">
 <h1>商品一覧</h1>
-<p></p>
+
+<table>
+   <div class = "row">
+    <tr>
+    <b>   
+       <div class = col-md-2-offset-1>
+        <td>商品ID</td><span>
+            
+        <div class = col-md-2>
+        <td>商品名</td><span>
+            
+        <div class = col-md-2>
+        <td>税抜き価格</td><span>
+
+        <div class = col-md-2>    
+        <td>ジャンル</td><span>
+    
+        
+        <div class = col-md-2-offset-1>
+        <td>ステータス</td><span>
+    </b>
+    </tr>
+</table>
+    
