--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Public::Orders#new</h1>
-<p>Find me in app/views/public/orders/new.html.erb</p>
+<h1>注文情報入力</h1>
+<p>商品名</p>
+
+支払情報
+
+お届け先
+
+<%= link_to "確認画面に進む", order_path %>p>
