--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,26 +1,3 @@
 <div class = "containar mt-">
-<h1>商品一覧</h1>
+<h1>商品一覧商</h1>
 
-<table>
-   <div class = "row">
-    <tr>
-    <b>   
-       <div class = col-md-2-offset-1>
-        <td>商品ID</td><span>
-            
-        <div class = col-md-2>
-        <td>商品名</td><span>
-            
-        <div class = col-md-2>
-        <td>税抜き価格</td><span>
-
-        <div class = col-md-2>    
-        <td>ジャンル</td><span>
-    
-        
-        <div class = col-md-2-offset-1>
-        <td>ステータス</td><span>
-    </b>
-    </tr>
-</table>
-    
