--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,2 +1,11 @@
-<h1>Admin::Items#new</h1>
-<p>Find me in app/views/admin/items/new.html.erb</p>
+<h1>商品新規登録画面</h1>
+<!--<p>Find me in app/views/admin/items/new.html.erb</p>-->
+
+<p>商品画像</p>
+<p>商品名</p>
+<p>商品説明</p>
+<p>ジャンル</p>
+<p>税抜き価格</p>
+<p>販売ステータス</p>
+
+新規登録
