--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Public::CartItems#index</h1>
-<p>Find me in app/views/public/cart_items/index.html.erb</p>
+<h1>ショッピングカート</h1>
+
+<p>商品名</p>
+<span>
+<p>単価</p>
+<span>
+<p>数量</p>
+<span>
+<p>小計</p>    
