--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,29 +19,49 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
            <ul class="navbar-nav ml-auto">
             <% if customer_signed_in? %>
-            <!-- <li>-->
-            <!--    %= link_to  customer_path(current_user.id), class: "text-white navbar-brand" do %>-->
-            <!--     <i class="fas fa-home"></i>Home-->
-            <!--    % end %>-->
-            <!-- </li>-->
-            <!-- <li>-->
-            <!--    %= link_to customers_path, class: "text-white navbar-brand" do %>-->
-            <!--     <i class="fas fa-users"></i>Users-->
-            <!--    % end %>-->
-            <!-- </li>-->
-            <!-- <li>-->
-            <!--    %= link_to customers_mypage_path, class: "text-white navbar-brand" do %>-->
-            <!--     <i class="fas fa-book-open"></i>マイページ-->
-            <!--    % end %>-->
-            <!-- </li>-->
-            <!-- <li>-->
-                <%= link_to destroy_customer_session_path, method: :delete, class: "text-white navbar-brand" do %>
-                 <i class=" fas fa-sign-out-alt"></i>Log out
+              <li>
+                <%= link_to customers_my_page_path, class: "text-white navbar-brand" do %>
+                 <i class="fas fa-book-open"></i>マイページ
                 <% end %>
-             </li>
-            <% elsif admin_signed_in? %>
-                   <%= link_to destroy_admin_session_path, method: :delete, class: "text-white navbar-brand" do %>
-                 <i class=" fas fa-sign-out-alt"></i>Log out
+              </li>
+              <li>
+                <%= link_to lot_path, class: "text-white navbar-brand" do  %>
+                  <i class="fal fa-birthday-cake fa-sm" style="color: #111212;"></i>
+                 商品一覧
+               </li>
+                 <% end %>
+               <li>
+                <%= link_to cart_items_path, class: "text-white navbar-brand" do %>
+                 <i class="fas fa-users"></i>カート
+                <% end %>
+               </li>
+               <li>
+                <%= link_to destroy_customer_session_path, method: :delete, class: "text-white navbar-brand" do %>
+                 <i class=" fas fa-sign-out-alt"></i>ログアウト
+                <% end %>
+               </li>
+             
+             <% elsif admin_signed_in? %>
+               <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                 <ul class="navbar-nav ml-auto">
+            　     <li>
+                   <%= link_to lot_path, class: "text-white navbar-brand" do  %>
+                    <i class="fal fa-birthday-cake fa-sm" style="color: #111212;"></i>商品一覧
+                    <% end %>
+                    <%= link_to admin_customers_path, class: "text-white navbar-brand" do %>会員一覧
+                      <%end %>
+                        <%= link_to  top_path, class: "text-white navbar-brand" do %>注文履歴一覧
+                      <%end %>
+                        <%= link_to  admin_genres_path, class: "text-white navbar-brand" do %>ジャンル一覧
+                      <%end %>
+                     <%= link_to destroy_admin_session_path, method: :delete, class: "text-white navbar-brand" do %>
+                      <i class=" fas fa-sign-out-alt"></i>ログアウト
+            　         <% end %>
+                   </li>
+                  </ul> 
+                </div>
+               </nav>
                 
             <% else %>
              <li>
@@ -66,7 +86,7 @@
              </li>
                 <% end %>
                 <% end %>
-                <% end %>
+               
             </ul>
           </div>
        </div>
