--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,2 +1,16 @@
-<h1>Public::Customers#unsubscribe</h1>
-<p>Find me in app/views/public/customers/unsubscribe.html.erb</p>
+<div class = "container mt-5">
+
+<h1>本当に退会しますか？</h1>
+<p>
+    
+</p>    
+<p>退会すると、会員登録情報や<br>
+これまでの購入履歴が閲覧できなくなります。<br>
+退会する場合は、「退会する」をクリックしてください。</p>
+
+<button type="button" >
+<%=link_to "退会しない", edit_customer_path, class: "btn btn-primary" do %>
+<% end %>
+<%=link_to "退会する", customers_unsubscribe_path, class: "btn btn-danger" do %>-->
+<% end %>
+</button>
