--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                  <ul class="navbar-nav ml-auto">
             　     <li>
-                   <%= link_to lot_path, class: "text-white navbar-brand" do  %>
+                   <%= link_to admin_items_path, class: "text-white navbar-brand" do  %>
                     <i class="fal fa-birthday-cake fa-sm" style="color: #111212;"></i>商品一覧
                     <% end %>
                     <%= link_to admin_customers_path, class: "text-white navbar-brand" do %>会員一覧
