--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -25,3 +25,15 @@
     </tr>
 </table>
     
+<!--% @items.each do |items| %>-->
+
+<!--  <p>タイトル</p>-->
+<!--  <span>-->
+<!--    %= items.name %>-->
+<!--  </span>-->
+  
+<!--  <p>画像</p>-->
+<!--  %= image_tag items.image, size: "200x200" %>-->
+<!--% end %>-->
+
+<!--</div>-->
