--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,14 +1,37 @@
-<div class = "containar mt-">
-<h1>商品一覧商</h1>
-
-<% @item.each do |items| %>
-
-  <p>タイトル</p>
-  <span>
-    <%=link_to item.title, new_admin_item_path(item.id) %>
-  </span>
+<div class = "containar mt-5">
   
-  <!--<p>画像</p>-->
-  <!--%= image_tag list.image, size: "300x300" %>-->
-<% end %>
+      <h1>商品一覧</h1>
+      <span>
+      
+       <%= link_to "商品追加", new_admin_item_path, 
+        class: "badge rounded-pill bg-dark text-warning" %>
+      
+      </span>
+<table class = "table">
+    <thead>
+      <tr>
+        <th scope = "col">商品ID</th>
+        <th scope = "col">商品名</th>
+        <th scope = "col">税抜価格</th>
+        <th scope = "col">ジャンル</th>
+        <th scope = "col">0</th>
+        <th scope ="col">ステータス</th>
+      </tr>
+    </thead>
+      <tbody>
+     <% @items.each do |items| %>
+        <tr>
+           <td><%= items.id %></td>
+           <td><%= link_to admin_item_path(items.id) do %>
+              <%= items.name %>
+              <% end %>
+           </td>
+           <td><%= items.price %></td>
+           <td>0</td>
+           <td><%=items.is_active %></td>
+        </tr>
+      </tbody>
+  
+     <% end %>
 
+</div>
