--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -5,7 +5,7 @@
         <!--<p>Find me in app/views/admin/items/new.html.erb</p>-->
         <p>
         </p>    
-         <%= form_with model: @item, url: 'admin/items/new', method: :post do |f| %>
+         <%= form_with model: @item, url: admin_zaku_path, method: :post do |f| %>
         <p>商品画像
         <!--%= f.label :image%>-->
         <%= f.file_field :image, accept: "image/*", :size=> "40" %>
