--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,21 +1,21 @@
 <div class = "container mt-5">
+    <div class="w100">
+    <div class="auto"
 <h1>ジャンル一覧・追加</h1>
+ <%= form_with model: @genre, url: admin_genres_path, method: :post do |f| %>
 
-<%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
 <div class= "field">
-      <%= f.label :ジャンル名 %>
-      <span>
-           <%= f.text_field :name %>
-      <span>
-           
-           <div class='form-group'>
-             <%= f.submit "新規登録", class:"btn btn-success" %></br>
-           </div>
+      
+            <div class='form-group'>
+                <%= f.label :ジャンル名 %>
+                <%= f.text_field :name %>
+                <%= f.submit "新規登録", class:"btn btn-success" %></br>
+            </div>
 </div>
 
 <b>ジャンル</b>
-
+         
             <div class='form-group'>
             　 <%= f.submit "編集する", class:"btn btn-success" %></br>
            </div>
-           <% end %>
+<% end %>
