--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -26,7 +26,7 @@
               <% end %>
            </td>
            <td><%= items.price %></td>
-           <td>0</td>
+           <td><%= items.genre.name %></td>
            <td><%=items.is_active %></td>
         </tr>
       </tbody>
