--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,6 +1,14 @@
 <div class="container mt-5">
   <div class="w100">
     <div class="auto">
+        <!--% if @item.errors.any? %>-->
+        <!--      %= @item.errors.count %>件のエラーが発生しました-->
+        <!--  <ul>-->
+        <!--    % @item.errors.full_messages.each do |message| %>-->
+        <!--      <li>%= message %></li>-->
+        <!--    % end %>-->
+        <!--  </ul>-->
+        <!--% end %>-->
         <h1>商品新規登録画面</h1>
         <!--<p>Find me in app/views/admin/items/new.html.erb</p>-->
         <p>
@@ -18,7 +26,8 @@
         <%= f.text_field :introduction, :size=> "40" %><br>
         </p>
         <p>ジャンル
-        <!--%= f.select :genres_id, options_from_collection_for_select(Genres.all, :id, :name) %>-->
+        <%= f.select :genre_id, options_from_collection_for_select(Genre.all,
+        :id, :name), include_blank: "選択して下さい" %>
         </p>
         <p>税抜き価格
         <%= f.text_field :price, :size=> "40" %>円<br>
