--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -21,7 +21,7 @@
               <td>
                   <%= @item.name %><br>
                   <%= @item.introduction %><br>
-                  <ジャンル><br>
+                  <%= @item.genre.name %><br>
               　   <%= @item.price %>円<br>
               　   <%=@item.is_active %><br>
               </td>
