--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -26,7 +26,7 @@
               　   <%=@item.is_active %><br>
               </td>
             </div>　
-   
+        
+            <%= link_to "編集する", edit_admin_item_path(@item.id), class:"btn btn-success" %>
   </div>
 </div>
-
