--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,2 +1,19 @@
-<h1>Admin::Homes#top</h1>
-<p>Find me in app/views/admin/homes/top.html.erb</p>
+<div class = "container mt-5">
+    
+<h1>注文履歴一覧</h1>
+
+<div class = "table">
+    <thead>
+        <tr>購入日時</tr>
+        <tr>購入者</tr>
+        <tr>注文個数</tr>
+        <tr>注文ステータス</tr>
+        <!--上記enum導入欄-->
+    </thead><br>
+         <tbody>
+        　 <td>cc</td><br>
+        　 <td>vv</td><br>
+        　 <td>bb</td><br>
+        　 <td>gg</td>
+         </tbody>
+</div>
