--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,2 +1,30 @@
-<h1>Admin::Customers#edit</h1>
-<p>Find me in app/views/admin/customers/edit.html.erb</p>
+div class = "table">
+     <span>
+     <p>
+      <b>登録情報</b>
+      <%= link_to "編集する", edit_customer_path, class: "btn btn-success" %>
+       <br>
+     </span>
+     
+       <tr>
+          <th>氏名</th>
+            <td><%= @customer.last_name.first_name %></td>
+             <br>
+          <th>カナ</th>
+            <td><%= @customer.last_name_kana.first_name_kana %>     </td>
+             <br>
+          <th>郵便番号</th>
+             <td><%= @customer.postal_code %>     </td>
+              <br>
+          <th>住所</th>
+             <td><%= @customer.address %>     </td>
+              <br>
+          <th>電話番号</th>
+             <td><%= @customer.telephone_number %>     </td>
+              <br>
+          <th>メールアドレス</th>
+             <td><%= @customer.email %></td>
+       </tr>
+       
+       </div>
+  </div>
