--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -2,7 +2,7 @@
 
 <h1>会員情報編集</h1>
 
-<%= form_with model: @customer, url: customer_path(current_customer.id), method: :patch do |f| %>
+<%= form_with model: @customer, url: customers_information_path, method: :patch do |f| %>
 <div class="auto">
    <p>
    <div class= "field">
@@ -39,7 +39,7 @@
     <div class="field">
       <%= f.label :住所 %>
       <span>
-      <%= f.text_field :address, :size=>"60"%>
+      <%= f.text_field :address,:size=>"50"%>
     </div>
     
     <p>
@@ -62,11 +62,13 @@
       <div class="actions">
       <div class='form-group'>
         <%= f.submit '編集内容保存', class:'btn btn-sm btn-success' %>
-    </div>
-     <!--%=link_to "退会する", customers_unsubscribe_path, class: "btn btn-danger" do %>-->
-     <!--  % end %>-->
-     <!-- </div>-->
-     <!-- <% end %>-->
+      </div>
+     <% end %>
+       
+       <%= link_to unsubscribe_path, class: "btn btn-danger" do %>
+       退会する
+     <% end %>
+     </div>
 
     </div>
-    </div>
+</div>
