--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -7,38 +7,41 @@
      <span>
      <p>
       <b>登録情報</b>
-      <%= link_to "編集する", edit_customer_path, class: "btn btn-success" %>
+      <%= link_to "編集する", customers_information_edit_path, class: "btn btn-success" %>
        <br>
      </span>
      
        <tr>
-          <th>氏名</th>
-            <td>     </td>
+          <th><b>氏名</b></th>
+            <td><%= current_customer.last_name %>
+                <%= current_customer.first_name %></td>
              <br>
-          <th>カナ</th>
-            <td>     </td>
+          <th><b>カナ</b></th>
+            <td><%= current_customer.last_name_kana %>
+            <%= current_customer.first_name_kana %></td>
              <br>
-          <th>郵便番号</th>
-             <td>     </td>
+          <th><b>郵便番号</b></th>
+             <td><%= current_customer.postal_code %></td>
               <br>
-          <th>住所</th>
-             <td>     </td>
+          <th><b>住所</b></th>
+             <td><%= current_customer.address %></td>
               <br>
-          <th>電話番号</th>
-             <td>     </td>
+          <th><b>電話番号</b></th>
+             <td><%= current_customer.telephone_number %></td>
               <br>
-          <th>メールアドレス</th>
-             <td>     </td>
+          <th><b>メールアドレス</b></th>
+             <td><%= current_customer.email %></td>
        </tr>
        
        </div>
   </div>
-         配送先
+         <b>配送先</b>
          <%= link_to "一覧を見る", addresses_path, class: "btn btn-primary" %><span>
           
          <br>
          
-         注文履歴<span>
+         <b>注文履歴</b>
+         <span>
          <%= link_to "一覧を見る", orders_path, class: "btn btn-primary" %>
       
 </div>
