--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -8,9 +8,15 @@
 これまでの購入履歴が閲覧できなくなります。<br>
 退会する場合は、「退会する」をクリックしてください。</p>
 
-<button type="button" >
-<%=link_to "退会しない", edit_customer_path, class: "btn btn-primary" do %>
+<!--<button type="button" >-->
+<span>
+<%=link_to customers_my_page_path, class: "btn btn-primary" do %>
+退会しない
 <% end %>
-<%=link_to "退会する", customers_unsubscribe_path, class: "btn btn-danger" do %>-->
+</span>
+<span>
+<%=link_to withdraw_path, method: :patch, class: "btn btn-danger" do %>
+退会する
 <% end %>
-</button>
+</span>
+<!--</button>-->
