--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -4,16 +4,20 @@
 
 <div class = "table">
     <thead>
-        <tr>購入日時</tr>
-        <tr>購入者</tr>
-        <tr>注文個数</tr>
-        <tr>注文ステータス</tr>
+        <tr><b>
+             <th scope = "col">購入日時</th>
+             <th scope = "col">購入者</th>
+             <th scope = "col">注文個数</th>
+             <th scope = "col">注文ステータス</th>
         <!--上記enum導入欄-->
+        </b></tr>
     </thead><br>
          <tbody>
-        　 <td>cc</td><br>
-        　 <td>vv</td><br>
-        　 <td>bb</td><br>
-        　 <td>gg</td>
+             <tr>
+                <td>cc</td>
+                <td>vv</td>
+                <td>bb</td>
+                <td>gg</td>
+            　</tr> 
          </tbody>
 </div>
