--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -26,7 +26,7 @@
            <td><% if customer.is_deleted? %></td>
            <span>退会</span>
                <% else %>
-            <span>有効有効</span>
+            <span>有効</span>
                <% end %>
         </tr>
       </tbody>
