--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -29,4 +29,13 @@
                   <span>販売停止中</span>
                   <% end %>
               </td>
+              
+            
+            <td>
+                <%= form_with model: @cart_item, url: cart_items_path do |f|%>
+                <%= f.select :amount, *[1..10] %>
+                <%= f.hidden_field :item_id, :value => @item.id %>
+                <%= f.submit 'カートに入れる', class:'btn btn-sm btn-success' %>
+                <% end %>
+            </td>
             </div>　
