--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,17 +1,17 @@
-div class = "table">
+
      <span>
      <p>
       <b>登録情報</b>
-      <%= link_to "編集する", edit_customer_path, class: "btn btn-success" %>
        <br>
      </span>
      
        <tr>
           <th>氏名</th>
-            <td><%= @customer.last_name.first_name %></td>
+            <td><%= @customer.last_name %></td>
+            <td><%= @customer.first_name %></td>
              <br>
           <th>カナ</th>
-            <td><%= @customer.last_name_kana.first_name_kana %>     </td>
+            <td><%= @customer.last_name_kana + " " + @customer.first_name_kana %></td>
              <br>
           <th>郵便番号</th>
              <td><%= @customer.postal_code %>     </td>
