--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,29 +1,53 @@
-<h1>ショッピングカート</h1>
+<div class="mb-8 text-center">
+  <span class="text-3xl font-bold">
+      <div class = "container mt-5">
+        <h1>ショッピングカート</h1>
+       
 
-<p>商品名</p>
-<span>
-<p>単価</p>
-<span>
-<p>数量</p>
-<%= f.select :amount, *[1..3] %>
-<span>
+<div class = "table">
 <table> 
-  <thead>
-      <th>単価(税込)</th>
-      <th>小計</th>
-  </thead>
+ <thead>
+  <tr>
+    <th scope = "col">商品名</th>
+    <th scope = "col">単価</th>
+    <th scope = "col">数量</th>
+    <th scope = "col">小計</th>
+    <th scope = "col"> </th>
+ </tr>
+</thead>
+      <tbody>
+<span>
   <tbody>
+    <% @total_x = 0 %>
   <% @cart_items.each do |cart_item| %>
-      <tr>
+      <tr>    
+       
+              <%= form_with model: @Cart_items, url: cart_items_path, method: :post do |f|%>
+              <td><% cart_item.item.name %> </td>
+              <td><% cart_item.item.price %></td>
                   <!--<td>%= (cart_item.item.price * 1.1).floor %></td>-->
-                  <!--上記参考文＝ｒｂ.に記述したため下記に変更-->
-          <td><%= cart_item.item.with_tax_price%></td>
+              <!--上記参考文＝ｒｂ.に記述したため下記に変更-->
+              <td><%= f.select :amount, *[1..10] %>
+              <%= f.submit '変更', class:'btn btn-sm btn-success' %>
+              <td><%= cart_item.item.with_tax_price %></td>
+              <td><%= cart_item.subtotal%></td>
+                  <% @total_x += cart_item.subtotal %>
+              <% end %></td>
+              <% end %>
+              
                   <!--<td>%= (cart_item.item.price * 1.1).floor * cart_item.amount %></td>-->
                    <!--上記参考文＝ｒｂ.に記述したため下記に変更-->
-          <td><%= cart_item.subtotal%></td>
-          
-          <% @合計金額 +=  (cart_item.item.price * 1.1).floor * cart_item.amount %>
       </tr>
-  <% end %>
   </tbody>
 </table>
+</div>
+          <%= link_to items_path, class:'btn btn-sm btn-success' do %>
+          買い物を続ける
+          <% end %>
+        
+        
+         <div class = "center">
+         <%= link_to orders_new_path,  class:'btn btn-sm btn-success' do %>
+          情報入力に進む
+          <% end %>
+         
