--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,49 +1,56 @@
 <div class = "container mt-5">
+     <h1>マイページ</h1>
   <div class = "row">
-     <!--<div class = "">      -->
-    <h1>マイページ</h1>
+    
      
-     <div class = "table">
-     <span>
-     <p>
+     
       <b>登録情報</b>
+     <span>
       <%= link_to "編集する", customers_information_edit_path, class: "btn btn-success" %>
-       <br>
      </span>
      
-       <tr>
-          <th><b>氏名</b></th>
-            <td><%= current_customer.last_name %>
+     <table class="table table-hover">
+     
+            <tr>
+              <th><b>氏名</b></th>
+                <td><%= current_customer.last_name %>
                 <%= current_customer.first_name %></td>
-             <br>
-          <th><b>カナ</b></th>
-            <td><%= current_customer.last_name_kana %>
-            <%= current_customer.first_name_kana %></td>
-             <br>
-          <th><b>郵便番号</b></th>
-             <td><%= current_customer.postal_code %></td>
-              <br>
-          <th><b>住所</b></th>
-             <td><%= current_customer.address %></td>
-              <br>
-          <th><b>電話番号</b></th>
-             <td><%= current_customer.telephone_number %></td>
-              <br>
-          <th><b>メールアドレス</b></th>
+            </tr>
+            <tr>
+              <th><b>カナ</b></th>
+                <td><%= current_customer.last_name_kana %>
+                    <%= current_customer.first_name_kana %></td>
+            </tr>
+            <tr>
+              <th><b>郵便番号</b></th>
+                 <td><%= current_customer.postal_code %></td>
+            </tr>
+            <tr>
+              <th><b>住所</b></th>
+                 <td><%= current_customer.address %></td>
+            </tr>
+            <tr>
+              <th><b>電話番号</b></th>
+                 <td><%= current_customer.telephone_number %></td>
+            </tr>
+            <tr>
+              <th><b>メールアドレス</b></th>
              <td><%= current_customer.email %></td>
-       </tr>
+            </tr>
        
+     </table>
        </div>
-  </div>
+         
+         <p>
          <b>配送先</b>
          <%= link_to "一覧を見る", addresses_path, class: "btn btn-primary" %><span>
-          
-         <br>
+         </p>
          
+         <p>
          <b>注文履歴</b>
          <span>
          <%= link_to "一覧を見る", orders_path, class: "btn btn-primary" %>
-      
+         </p>
 </div>
        
        <!--%= form_with model: @cart_item, url: cart_items_path, method: :post do |f| %>-->
