--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <main>
-<div class="container">
+<div class = "container mt-5">
     <div class="w100">
     </div>
   <!--<div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0">-->
